[package]
name = "hello_wasm"
version = "0.1.0"
authors = ["AleMaze <alessandro.mason.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlImageElement",
    "ImageBitmap",
    "PromiseNativeHandler",
    "Node",
    "Text",
    "Window"
]

[dependencies.rand]
version = "0.7.3"
features = [
    "wasm-bindgen"
]